@@ -1,3 +1,11 @@
+2012-05-03  Philippe Roussel  <p.o.roussel@free.fr>
+
+	* Bundles/AO/*
+	New output bundle base on libao. 
+
+	* GNUmakefile
+	Add AO bundle to the build, unless disable-ao=yes if used.
+
 2012-05-03 Riccardo Mottola for Yavor Doganov
 
 	* GNUmakefile
